==> CommunityGD32Cores/gd32-pio-projects/gd32-mbedos-baremetal-custom-target-usb/src/usb_support/USBPhy_GD32.cpp <==
#include "USBPhyHw.h"
#include "pinmap.h"
#define EP_TO_LOG(ep)       ((ep) & 0xF)
#define LOG_IN_TO_EP(log)   ((log) | 0x80)
#define LOG_OUT_TO_EP(log)  ((log) | 0x00)
#define EP_TO_IDX(ep)       ((EP_TO_LOG(ep) << 1) | ((ep) & 0x80 ? 1 : 0))
#define IDX_TO_EP(idx)      (((idx) >> 1)|((idx) & 1) << 7)
#define NUM_ENDPOINTS                6
#define MAX_PACKET_SIZE_NON_ISO      512
#define MAX_PACKET_SIZE_ISO          1023
#define NUM_ENDPOINTS                4
#define MAX_PACKET_SIZE_NON_ISO      64
#define MAX_PACKET_SIZE_ISO          (256 + 128)     // Spec can go up to 1023, only ram for this though
#include "usb_lib/usbd_core.h"
#include "usb_lib/usbd_transc.h"
#include "usb_lib/usbd_enum.h"
#include "usb_lib/usbd_lld_int.h"
#define USB_CLASS_CDC                           0x02U
#define USB_CDC_SUBCLASS_DLCM                   0x01U
#define USB_CDC_SUBCLASS_ACM                    0x02U
#define USB_CDC_PROTOCOL_NONE                   0x00U
#define USB_CDC_PROTOCOL_AT                     0x01U
#define USB_CLASS_DATA                          0x0AU
#define USB_DESCTYPE_CDC_ACM                    0x21U
#define USB_DESCTYPE_CS_INTERFACE               0x24U
#define USB_CDC_ACM_CONFIG_DESC_SIZE            0x43U
#define USB_CDC_NOTIFY_SERIAL_STATE             0x20U
#define SEND_ENCAPSULATED_COMMAND               0x00U
#define GET_ENCAPSULATED_RESPONSE               0x01U
#define SET_COMM_FEATURE                        0x02U
#define GET_COMM_FEATURE                        0x03U

void USBPhyHw::init(USBPhyEvents *events)
{
    setup_usb_clock();

    //printf("USBPhyHw::init() called\n");
    const PinMap *map = NULL;

    NVIC_DisableIRQ(USBHAL_IRQn);

    if (this->events == NULL) {
        sleep_manager_lock_deep_sleep();
    }
    this->events = events;
    sof_enabled = false;
    memset(epComplete, 0, sizeof(epComplete));

    //__HAL_RCC_USB_CLK_ENABLE();
    map = PinMap_USB_FS;

#if defined(TARGET_GD32F30X)
    // USB_DevConnect is empty
    USB_reenumerate();
#endif

    // Pass instance for usage inside call back
    instance = this;

    // Configure USB pins
    while (map->pin != NC) {
        pin_function(map->pin, map->function);
        map++;
    }

#if !defined(TARGET_GD32F30X)
    __HAL_RCC_PWR_CLK_ENABLE();
#endif

    /* stuff */
    usbd_init(&usbd_device, &usb_device_desc, &usb_class_callbacks);

    // Configure interrupt vector
    NVIC_SetVector(USBHAL_IRQn, (uint32_t)&_usbisr);
    NVIC_SetPriority(USBHAL_IRQn, 1);
    NVIC_EnableIRQ(USBHAL_IRQn);
}

void USBPhyHw::connect()
{
    printf("USBPhyHw::connect() called\n");

    /* connect */
    wait_us(10000);
}

const usb_ep_table_t *USBPhyHw::endpoint_table()
{
    static const usb_ep_table_t table = {
#if (MBED_CONF_TARGET_USB_SPEED != USE_USB_OTG_HS)
        512, // 512 byte for endpoint buffers but space is allocated up front
#else
        4096,
#endif
        {
            {USB_EP_ATTR_ALLOW_CTRL                         | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0},
            {USB_EP_ATTR_ALLOW_BULK | USB_EP_ATTR_ALLOW_INT | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0}, // NON ISO
            {USB_EP_ATTR_ALLOW_BULK | USB_EP_ATTR_ALLOW_INT | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0}, // NON ISO
#if (MBED_CONF_TARGET_USB_SPEED == USE_USB_OTG_HS)
            {USB_EP_ATTR_ALLOW_ALL                          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0},
#endif
            {USB_EP_ATTR_ALLOW_ALL                          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0},
#if (MBED_CONF_TARGET_USB_SPEED != USE_USB_OTG_HS)
            {0                     | USB_EP_ATTR_DIR_IN_AND_OUT,  0, 0}
#endif
        }
    };
    printf("USBPhyHw::endpoint_table() called\n");

    return &table;
}

void USBPhyHw::process()
{
    //HAL_PCD_IRQHandler(&instance->hpcd);
    usbd_isr();
    // Re-enable interrupt
    NVIC_ClearPendingIRQ(USBHAL_IRQn);
    NVIC_EnableIRQ(USBHAL_IRQn);
}
