==> Scouttman/mbed-os/usb/device/targets/TARGET_NORDIC/TARGET_MCU_NRF52840/USBPhy_Nordic.cpp <==
#include "USBPhyHw.h"

void USBPhyHw::init(USBPhyEvents *events)
{
    this->events = events;

    // Disable IRQ
    _disable_usb_interrupts();
    NVIC_DisableIRQ(POWER_CLOCK_IRQn);

    // Store reference to this instance
	instance = this;

    // Initialize the power driver
    ret_code_t ret = nrf_drv_power_init(NULL);

    // Register a handler for USB power events
    static const nrf_drv_power_usbevt_config_t config = { .handler =
    		_usb_power_evt_handler };

    // This will enable USB-related power interrupts
    ret = nrf_drv_power_usbevt_init(&config);

    // Configure endpoint info structures
    int n;
    for(n = 0; n < NRF_USBD_EPOUT_CNT; n++) {
    		usb_ep_info_t* info = &this->ep_info[get_ep_index(NRF_USBD_EPOUT(n))];
    		info->max_packet_size = EP_MAX_PACKET_SIZE(n);
    }

    for(n = 0; n < NRF_USBD_EPIN_CNT; n++) {
    		usb_ep_info_t* info = &this->ep_info[get_ep_index(NRF_USBD_EPIN(n))];
    		info->max_packet_size = EP_MAX_PACKET_SIZE(n);
    }

    // Enable IRQ (not USB yet, see _usbd_start)
    NVIC_SetVector(USBD_IRQn, (uint32_t)&_usbisr);
    NVIC_EnableIRQ(POWER_CLOCK_IRQn);
}

void USBPhyHw::connect()
{
	// To save power, we only enable the USBD peripheral
	// when there's actually VBUS detected

	// So flag that the USB stack is ready to connect
	this->connect_enabled = true;

	// If VBUS is already available, enable immediately
	if(nrf_drv_power_usbstatus_get() == NRF_DRV_POWER_USB_STATE_CONNECTED)
	{
		// Enabling USB will cause NRF_DRV_POWER_USB_EVT_READY
		// to occur, which will start the USBD peripheral
		// when the internal regulator has settled
		_usbd_enable();

		// Check to see if the regulator is ready now
		if(nrf_drv_power_usbstatus_get() == NRF_DRV_POWER_USB_STATE_READY)
			if(!this->started)
				_usbd_start();
	}
}

const usb_ep_table_t *USBPhyHw::endpoint_table()
{
	static const usb_ep_table_t ep_table =
		{
			2048, // 64 bytes per bulk/int endpoint (16), 1023 bytes for iso endpoint pair (1)
			{
				{ USB_EP_ATTR_ALLOW_CTRL		| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ ENDPOINT_NON_ISO 			| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ ENDPOINT_NON_ISO 			| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ ENDPOINT_NON_ISO 			| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ ENDPOINT_NON_ISO			| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ ENDPOINT_NON_ISO 			| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ ENDPOINT_NON_ISO 			| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ ENDPOINT_NON_ISO 			| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ USB_EP_ATTR_ALLOW_ISO 		| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ 0 							| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ 0							| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ 0							| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ 0 							| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ 0							| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ 0							| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
				{ 0							| USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
			}
		};
	return &ep_table;
}

void USBPhyHw::process()
{
    // TODO - update register for your mcu

    //uint8_t stat = USB0->STAT;

    //USB0->STAT = stat; // Clear pending interrupts

    // reset interrupt
    /*if (stat & USB_STAT_RESET_MASK) {

        // TODO - disable all endpoints

        // TODO - clear all endpoint interrupts

        // TODO - enable control endpoint

        // reset bus for USBDevice layer
        events->reset();

        // Re-enable interrupt
        NVIC_ClearPendingIRQ(USB_IRQn);
        NVIC_EnableIRQ(USB_IRQn);
        return;
    }*/

    // A usb power event happened
    if(usb_power_evt_flag) {

    		// Power applied
    		if(usb_power_evt == NRF_DRV_POWER_USB_EVT_DETECTED) {
    			events->power(true);

    			// Start connecting if connect() was already called
    			if(connect_enabled)
    				_usbd_enable();
    		}

    		// Power lost
    		if(usb_power_evt == NRF_DRV_POWER_USB_EVT_REMOVED) {
    			events->power(false);
    		}

    		if(usb_power_evt == NRF_DRV_POWER_USB_EVT_READY) {
    			// USB power is ready, start USBD processing
    			if(!this->started)
    				_usbd_start();
    		}

    		usb_power_evt_flag = false;
    }

    // sleep interrupt
//    if (stat & USB_STAT_SUSPEND_MASK) {
//        events->suspend(true);
//    }
//
//    // resume interrupt
//    if (stat & USB_STAT_RESUME_MASK) {
//        events->suspend(false);
//    }
//
//    // sof interrupt
//    if (stat & USB_STAT_SOF_MASK) {
//        // SOF event, read frame number
//        events->sof(USB0->FRAME);
//    }
//
//    // endpoint interrupt
//    if (stat & USB_STAT_EP_MASK) {
//        uint32_t ep_pending = USB->EP;
//
//        // TODO - call endpoint 0 IN callback if pending
//        events->ep0_in();
//
//        // TODO - call endpoint 0 OUT callback if pending
//        events->ep0_out();
//
//        // TODO - call endpoint 0 SETUP callback if pending
//        events->ep0_setup();
//
//        for (int i = 0; i < 16; i++) {
//            // TODO - call endpoint i IN callback if pending
//            events->in(0x80 | i);
//        }
//
//        for (int i = 0; i < 16; i++) {
//            // TODO - call endpoint i OUT callback if pending
//            events->out();
//        }
//
//        USB->EP = ep_pending; // clear pending
//    }

    // Re-enable interrupt
    _enable_usb_interrupts();
}
